fix: correct errors, use strings.xml for text
Fixed errors and updated text to use strings.xml for better management of text resources.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">OverData</string>
+    <string name="description">Description</string>
+    <string name="heroes">HEROES</string>
+    <string name="game_modes">GAME MODES</string>
+    <string name="maps">MAPS</string>
 </resources>
